# trading-analytics-rag

./: .coverage  .env.example  .gitignore  ANALYSIS_REPORT.md  ARCHITECTURE_VISUAL.txt  CHANGELOG.md  QUICK_SUMMARY.md  README.md  RECOMMENDATIONS.md  pyproject.toml  requirements.txt  test_sql.py
artifacts/: trading.faiss  trading.jsonl
scripts/: build_vector_index.py  check_database.py  check_db_tables.py  check_structure.py  diag_imports.py  ingest_logs.py  ingest_trading_logs.py  init_database.py  inspect_logs.py  migrate_to_rag_events.py  migrate_trading_to_events.py  test_agent.py  test_embedding.py  test_generation.py  test_normalize.py  test_rag_pipeline.py  test_vector_search.py
src/: __init__.py  config.py
src/layer1_ingestion/: __init__.py  deduplication.py  description.txt  id_generators.py  loaders.py  models.py  normalizers.py
src/layer2_storage/: __init__.py  cache.py  description.txt  embed.py  metadata_store.py  schema.sql  vector_store.py
src/layer3_retrieval/: __init__.py  interfaces.py  models.py  pipeline.py  reranking.py  retrievers.py
src/layer4_generation/: __init__.py  generator.py  interfaces.py  llm.py  prompts.py
src/layer5_agents/: __init__.py  agent.py  prompts.py  tests_parsing.py  tools.py
tests/unit/: test_vector_store.py
